StudentCode/C10/generated/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programme
Rule 1     programme -> functions
Rule 2     functions -> function functions
Rule 3     functions -> function_main
Rule 4     function -> identifiant LPAREN arguments RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR
Rule 5     function -> type identifiant LPAREN arguments RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
Rule 6     function_main -> idmain LPAREN RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR
Rule 7     function_main -> type idmain LPAREN RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
Rule 8     identifiant -> ID
Rule 9     idmain -> MAIN
Rule 10    type -> ENTIER
Rule 11    arguments -> argument
Rule 12    arguments -> EPSILON
Rule 13    argument -> ENTIER ID
Rule 14    argument -> ENTIER ID COMMA argument
Rule 15    argument -> ENTIER ID LCROCHET RCROCHET
Rule 16    argument -> ENTIER ID LCROCHET RCROCHET argument
Rule 17    argument -> number
Rule 18    argument -> number COMMA argument
Rule 19    EPSILON -> <empty>
Rule 20    declarations -> declaration
Rule 21    declarations -> EPSILON
Rule 22    declaration -> ENTIER list_var ENDLINE
Rule 23    declaration -> ENTIER ID
Rule 24    declaration -> ENTIER ID COMMA declaration
Rule 25    declaration -> ENTIER ID LCROCHET RCROCHET
Rule 26    declaration -> ENTIER ID LCROCHET RCROCHET declaration
Rule 27    list_var -> ID
Rule 28    list_var -> ID COMMA list_var
Rule 29    list_var -> ID LCROCHET RCROCHET
Rule 30    list_var -> ID LCROCHET RCROCHET COMMA list_var
Rule 31    bodyexp -> expressions
Rule 32    roteurexp -> RETOUR expression_op ENDLINE
Rule 33    expressions -> expression expressions
Rule 34    expressions -> expression_fcall
Rule 35    expressions -> EPSILON
Rule 36    expression -> ID AFFECT expression_fcall
Rule 37    expression -> ID LCROCHET expression_op RCROCHET AFFECT expression_fcall
Rule 38    expression -> ID AFFECT expression_op ENDLINE
Rule 39    expression -> ID LCROCHET expression_op RCROCHET AFFECT expression_op ENDLINE
Rule 40    expression -> SI comparison_op ALORS LSEPARATEUR expressions RSEPARATEUR SINON LSEPARATEUR expressions RSEPARATEUR
Rule 41    expression -> SI comparison_op ALORS LSEPARATEUR expressions RSEPARATEUR
Rule 42    expression -> TANTQUE comparison_op FAIRE LSEPARATEUR expressions RSEPARATEUR
Rule 43    expression -> LIRE LPAREN identifiant RPAREN ENDLINE
Rule 44    expression -> ECRIRE LPAREN expression_op RPAREN ENDLINE
Rule 45    expression -> ECRIRE LPAREN string_id RPAREN ENDLINE
Rule 46    string_id -> STRING
Rule 47    expression_fcall -> ID LPAREN expression_op RPAREN ENDLINE
Rule 48    expression_fcall -> ID LPAREN string_id RPAREN ENDLINE
Rule 49    expression_fcall -> ID LPAREN RPAREN ENDLINE
Rule 50    expression_op -> expression_op ADD_OP expression_op
Rule 51    expression_op -> expression_op MUL_OP expression_op
Rule 52    expression_op -> comparison_op
Rule 53    comparison_op -> expression_op LOGC_OP expression_op
Rule 54    comparison_op -> LPAREN comparison_op RPAREN
Rule 55    expression_op -> ID COMMA expression_op
Rule 56    expression_op -> number COMMA expression_op
Rule 57    expression_op -> ID
Rule 58    expression_op -> number
Rule 59    expression_op -> LPAREN expression_op RPAREN
Rule 60    number -> ADD_OP NUMBER
Rule 61    number -> NUMBER

Terminals, with rules where they appear

ADD_OP               : 50 60
AFFECT               : 36 37 38 39
ALORS                : 40 41
COMMA                : 14 18 24 28 30 55 56
ECRIRE               : 44 45
ENDLINE              : 22 32 38 39 43 44 45 47 48 49
ENTIER               : 10 13 14 15 16 22 23 24 25 26
FAIRE                : 42
ID                   : 8 13 14 15 16 23 24 25 26 27 28 29 30 36 37 38 39 47 48 49 55 57
LCROCHET             : 15 16 25 26 29 30 37 39
LIRE                 : 43
LOGC_OP              : 53
LPAREN               : 4 5 6 7 43 44 45 47 48 49 54 59
LSEPARATEUR          : 4 5 6 7 40 40 41 42
MAIN                 : 9
MUL_OP               : 51
NUMBER               : 60 61
RCROCHET             : 15 16 25 26 29 30 37 39
RETOUR               : 32
RPAREN               : 4 5 6 7 43 44 45 47 48 49 54 59
RSEPARATEUR          : 4 5 6 7 40 40 41 42
SI                   : 40 41
SINON                : 40
STRING               : 46
TANTQUE              : 42
error                : 

Nonterminals, with rules where they appear

EPSILON              : 12 21 35
argument             : 11 14 16 18
arguments            : 4 5
bodyexp              : 4 5 6 7
comparison_op        : 40 41 42 52 54
declaration          : 20 24 26
declarations         : 4 5 6 7
expression           : 33
expression_fcall     : 34 36 37
expression_op        : 32 37 38 39 39 44 47 50 50 51 51 53 53 55 56 59
expressions          : 31 33 40 40 41 42
function             : 2
function_main        : 3
functions            : 1 2
identifiant          : 4 5 43
idmain               : 6 7
list_var             : 22 28 30
number               : 17 18 56 58
programme            : 0
roteurexp            : 5 7
string_id            : 45 48
type                 : 5 7

Parsing method: LALR

state 0

    (0) S' -> . programme
    (1) programme -> . functions
    (2) functions -> . function functions
    (3) functions -> . function_main
    (4) function -> . identifiant LPAREN arguments RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR
    (5) function -> . type identifiant LPAREN arguments RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
    (6) function_main -> . idmain LPAREN RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR
    (7) function_main -> . type idmain LPAREN RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
    (8) identifiant -> . ID
    (10) type -> . ENTIER
    (9) idmain -> . MAIN

    ID              shift and go to state 8
    ENTIER          shift and go to state 9
    MAIN            shift and go to state 10

    programme                      shift and go to state 1
    functions                      shift and go to state 2
    function                       shift and go to state 3
    function_main                  shift and go to state 4
    identifiant                    shift and go to state 5
    type                           shift and go to state 6
    idmain                         shift and go to state 7

state 1

    (0) S' -> programme .



state 2

    (1) programme -> functions .

    $end            reduce using rule 1 (programme -> functions .)


state 3

    (2) functions -> function . functions
    (2) functions -> . function functions
    (3) functions -> . function_main
    (4) function -> . identifiant LPAREN arguments RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR
    (5) function -> . type identifiant LPAREN arguments RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
    (6) function_main -> . idmain LPAREN RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR
    (7) function_main -> . type idmain LPAREN RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
    (8) identifiant -> . ID
    (10) type -> . ENTIER
    (9) idmain -> . MAIN

    ID              shift and go to state 8
    ENTIER          shift and go to state 9
    MAIN            shift and go to state 10

    function                       shift and go to state 3
    functions                      shift and go to state 11
    function_main                  shift and go to state 4
    identifiant                    shift and go to state 5
    type                           shift and go to state 6
    idmain                         shift and go to state 7

state 4

    (3) functions -> function_main .

    $end            reduce using rule 3 (functions -> function_main .)


state 5

    (4) function -> identifiant . LPAREN arguments RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR

    LPAREN          shift and go to state 12


state 6

    (5) function -> type . identifiant LPAREN arguments RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
    (7) function_main -> type . idmain LPAREN RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
    (8) identifiant -> . ID
    (9) idmain -> . MAIN

    ID              shift and go to state 8
    MAIN            shift and go to state 10

    identifiant                    shift and go to state 13
    idmain                         shift and go to state 14

state 7

    (6) function_main -> idmain . LPAREN RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR

    LPAREN          shift and go to state 15


state 8

    (8) identifiant -> ID .

    LPAREN          reduce using rule 8 (identifiant -> ID .)
    RPAREN          reduce using rule 8 (identifiant -> ID .)


state 9

    (10) type -> ENTIER .

    ID              reduce using rule 10 (type -> ENTIER .)
    MAIN            reduce using rule 10 (type -> ENTIER .)


state 10

    (9) idmain -> MAIN .

    LPAREN          reduce using rule 9 (idmain -> MAIN .)


state 11

    (2) functions -> function functions .

    $end            reduce using rule 2 (functions -> function functions .)


state 12

    (4) function -> identifiant LPAREN . arguments RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR
    (11) arguments -> . argument
    (12) arguments -> . EPSILON
    (13) argument -> . ENTIER ID
    (14) argument -> . ENTIER ID COMMA argument
    (15) argument -> . ENTIER ID LCROCHET RCROCHET
    (16) argument -> . ENTIER ID LCROCHET RCROCHET argument
    (17) argument -> . number
    (18) argument -> . number COMMA argument
    (19) EPSILON -> .
    (60) number -> . ADD_OP NUMBER
    (61) number -> . NUMBER

    ENTIER          shift and go to state 19
    RPAREN          reduce using rule 19 (EPSILON -> .)
    ADD_OP          shift and go to state 21
    NUMBER          shift and go to state 22

    arguments                      shift and go to state 16
    argument                       shift and go to state 17
    EPSILON                        shift and go to state 18
    number                         shift and go to state 20

state 13

    (5) function -> type identifiant . LPAREN arguments RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR

    LPAREN          shift and go to state 23


state 14

    (7) function_main -> type idmain . LPAREN RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR

    LPAREN          shift and go to state 24


state 15

    (6) function_main -> idmain LPAREN . RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR

    RPAREN          shift and go to state 25


state 16

    (4) function -> identifiant LPAREN arguments . RPAREN declarations LSEPARATEUR bodyexp RSEPARATEUR

    RPAREN          shift and go to state 26


state 17

    (11) arguments -> argument .

    RPAREN          reduce using rule 11 (arguments -> argument .)


state 18

    (12) arguments -> EPSILON .

    RPAREN          reduce using rule 12 (arguments -> EPSILON .)


state 19

    (13) argument -> ENTIER . ID
    (14) argument -> ENTIER . ID COMMA argument
    (15) argument -> ENTIER . ID LCROCHET RCROCHET
    (16) argument -> ENTIER . ID LCROCHET RCROCHET argument

    ID              shift and go to state 27


state 20

    (17) argument -> number .
    (18) argument -> number . COMMA argument

    RPAREN          reduce using rule 17 (argument -> number .)
    COMMA           shift and go to state 28


state 21

    (60) number -> ADD_OP . NUMBER

    NUMBER          shift and go to state 29


state 22

    (61) number -> NUMBER .

    COMMA           reduce using rule 61 (number -> NUMBER .)
    RPAREN          reduce using rule 61 (number -> NUMBER .)
    LOGC_OP         reduce using rule 61 (number -> NUMBER .)
    ADD_OP          reduce using rule 61 (number -> NUMBER .)
    MUL_OP          reduce using rule 61 (number -> NUMBER .)
    ENDLINE         reduce using rule 61 (number -> NUMBER .)
    RCROCHET        reduce using rule 61 (number -> NUMBER .)
    ALORS           reduce using rule 61 (number -> NUMBER .)
    FAIRE           reduce using rule 61 (number -> NUMBER .)


state 23

    (5) function -> type identifiant LPAREN . arguments RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
    (11) arguments -> . argument
    (12) arguments -> . EPSILON
    (13) argument -> . ENTIER ID
    (14) argument -> . ENTIER ID COMMA argument
    (15) argument -> . ENTIER ID LCROCHET RCROCHET
    (16) argument -> . ENTIER ID LCROCHET RCROCHET argument
    (17) argument -> . number
    (18) argument -> . number COMMA argument
    (19) EPSILON -> .
    (60) number -> . ADD_OP NUMBER
    (61) number -> . NUMBER

    ENTIER          shift and go to state 19
    RPAREN          reduce using rule 19 (EPSILON -> .)
    ADD_OP          shift and go to state 21
    NUMBER          shift and go to state 22

    arguments                      shift and go to state 30
    argument                       shift and go to state 17
    EPSILON                        shift and go to state 18
    number                         shift and go to state 20

state 24

    (7) function_main -> type idmain LPAREN . RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR

    RPAREN          shift and go to state 31


state 25

    (6) function_main -> idmain LPAREN RPAREN . declarations LSEPARATEUR bodyexp RSEPARATEUR
    (20) declarations -> . declaration
    (21) declarations -> . EPSILON
    (22) declaration -> . ENTIER list_var ENDLINE
    (23) declaration -> . ENTIER ID
    (24) declaration -> . ENTIER ID COMMA declaration
    (25) declaration -> . ENTIER ID LCROCHET RCROCHET
    (26) declaration -> . ENTIER ID LCROCHET RCROCHET declaration
    (19) EPSILON -> .

    ENTIER          shift and go to state 35
    LSEPARATEUR     reduce using rule 19 (EPSILON -> .)

    declarations                   shift and go to state 32
    declaration                    shift and go to state 33
    EPSILON                        shift and go to state 34

state 26

    (4) function -> identifiant LPAREN arguments RPAREN . declarations LSEPARATEUR bodyexp RSEPARATEUR
    (20) declarations -> . declaration
    (21) declarations -> . EPSILON
    (22) declaration -> . ENTIER list_var ENDLINE
    (23) declaration -> . ENTIER ID
    (24) declaration -> . ENTIER ID COMMA declaration
    (25) declaration -> . ENTIER ID LCROCHET RCROCHET
    (26) declaration -> . ENTIER ID LCROCHET RCROCHET declaration
    (19) EPSILON -> .

    ENTIER          shift and go to state 35
    LSEPARATEUR     reduce using rule 19 (EPSILON -> .)

    declarations                   shift and go to state 36
    declaration                    shift and go to state 33
    EPSILON                        shift and go to state 34

state 27

    (13) argument -> ENTIER ID .
    (14) argument -> ENTIER ID . COMMA argument
    (15) argument -> ENTIER ID . LCROCHET RCROCHET
    (16) argument -> ENTIER ID . LCROCHET RCROCHET argument

    RPAREN          reduce using rule 13 (argument -> ENTIER ID .)
    COMMA           shift and go to state 37
    LCROCHET        shift and go to state 38


state 28

    (18) argument -> number COMMA . argument
    (13) argument -> . ENTIER ID
    (14) argument -> . ENTIER ID COMMA argument
    (15) argument -> . ENTIER ID LCROCHET RCROCHET
    (16) argument -> . ENTIER ID LCROCHET RCROCHET argument
    (17) argument -> . number
    (18) argument -> . number COMMA argument
    (60) number -> . ADD_OP NUMBER
    (61) number -> . NUMBER

    ENTIER          shift and go to state 19
    ADD_OP          shift and go to state 21
    NUMBER          shift and go to state 22

    number                         shift and go to state 20
    argument                       shift and go to state 39

state 29

    (60) number -> ADD_OP NUMBER .

    COMMA           reduce using rule 60 (number -> ADD_OP NUMBER .)
    RPAREN          reduce using rule 60 (number -> ADD_OP NUMBER .)
    LOGC_OP         reduce using rule 60 (number -> ADD_OP NUMBER .)
    ADD_OP          reduce using rule 60 (number -> ADD_OP NUMBER .)
    MUL_OP          reduce using rule 60 (number -> ADD_OP NUMBER .)
    ENDLINE         reduce using rule 60 (number -> ADD_OP NUMBER .)
    RCROCHET        reduce using rule 60 (number -> ADD_OP NUMBER .)
    ALORS           reduce using rule 60 (number -> ADD_OP NUMBER .)
    FAIRE           reduce using rule 60 (number -> ADD_OP NUMBER .)


state 30

    (5) function -> type identifiant LPAREN arguments . RPAREN declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR

    RPAREN          shift and go to state 40


state 31

    (7) function_main -> type idmain LPAREN RPAREN . declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
    (20) declarations -> . declaration
    (21) declarations -> . EPSILON
    (22) declaration -> . ENTIER list_var ENDLINE
    (23) declaration -> . ENTIER ID
    (24) declaration -> . ENTIER ID COMMA declaration
    (25) declaration -> . ENTIER ID LCROCHET RCROCHET
    (26) declaration -> . ENTIER ID LCROCHET RCROCHET declaration
    (19) EPSILON -> .

    ENTIER          shift and go to state 35
    LSEPARATEUR     reduce using rule 19 (EPSILON -> .)

    declarations                   shift and go to state 41
    declaration                    shift and go to state 33
    EPSILON                        shift and go to state 34

state 32

    (6) function_main -> idmain LPAREN RPAREN declarations . LSEPARATEUR bodyexp RSEPARATEUR

    LSEPARATEUR     shift and go to state 42


state 33

    (20) declarations -> declaration .

    LSEPARATEUR     reduce using rule 20 (declarations -> declaration .)


state 34

    (21) declarations -> EPSILON .

    LSEPARATEUR     reduce using rule 21 (declarations -> EPSILON .)


state 35

    (22) declaration -> ENTIER . list_var ENDLINE
    (23) declaration -> ENTIER . ID
    (24) declaration -> ENTIER . ID COMMA declaration
    (25) declaration -> ENTIER . ID LCROCHET RCROCHET
    (26) declaration -> ENTIER . ID LCROCHET RCROCHET declaration
    (27) list_var -> . ID
    (28) list_var -> . ID COMMA list_var
    (29) list_var -> . ID LCROCHET RCROCHET
    (30) list_var -> . ID LCROCHET RCROCHET COMMA list_var

    ID              shift and go to state 44

    list_var                       shift and go to state 43

state 36

    (4) function -> identifiant LPAREN arguments RPAREN declarations . LSEPARATEUR bodyexp RSEPARATEUR

    LSEPARATEUR     shift and go to state 45


state 37

    (14) argument -> ENTIER ID COMMA . argument
    (13) argument -> . ENTIER ID
    (14) argument -> . ENTIER ID COMMA argument
    (15) argument -> . ENTIER ID LCROCHET RCROCHET
    (16) argument -> . ENTIER ID LCROCHET RCROCHET argument
    (17) argument -> . number
    (18) argument -> . number COMMA argument
    (60) number -> . ADD_OP NUMBER
    (61) number -> . NUMBER

    ENTIER          shift and go to state 19
    ADD_OP          shift and go to state 21
    NUMBER          shift and go to state 22

    argument                       shift and go to state 46
    number                         shift and go to state 20

state 38

    (15) argument -> ENTIER ID LCROCHET . RCROCHET
    (16) argument -> ENTIER ID LCROCHET . RCROCHET argument

    RCROCHET        shift and go to state 47


state 39

    (18) argument -> number COMMA argument .

    RPAREN          reduce using rule 18 (argument -> number COMMA argument .)


state 40

    (5) function -> type identifiant LPAREN arguments RPAREN . declarations LSEPARATEUR bodyexp roteurexp RSEPARATEUR
    (20) declarations -> . declaration
    (21) declarations -> . EPSILON
    (22) declaration -> . ENTIER list_var ENDLINE
    (23) declaration -> . ENTIER ID
    (24) declaration -> . ENTIER ID COMMA declaration
    (25) declaration -> . ENTIER ID LCROCHET RCROCHET
    (26) declaration -> . ENTIER ID LCROCHET RCROCHET declaration
    (19) EPSILON -> .

    ENTIER          shift and go to state 35
    LSEPARATEUR     reduce using rule 19 (EPSILON -> .)

    declarations                   shift and go to state 48
    declaration                    shift and go to state 33
    EPSILON                        shift and go to state 34

state 41

    (7) function_main -> type idmain LPAREN RPAREN declarations . LSEPARATEUR bodyexp roteurexp RSEPARATEUR

    LSEPARATEUR     shift and go to state 49


state 42

    (6) function_main -> idmain LPAREN RPAREN declarations LSEPARATEUR . bodyexp RSEPARATEUR
    (31) bodyexp -> . expressions
    (33) expressions -> . expression expressions
    (34) expressions -> . expression_fcall
    (35) expressions -> . EPSILON
    (36) expression -> . ID AFFECT expression_fcall
    (37) expression -> . ID LCROCHET expression_op RCROCHET AFFECT expression_fcall
    (38) expression -> . ID AFFECT expression_op ENDLINE
    (39) expression -> . ID LCROCHET expression_op RCROCHET AFFECT expression_op ENDLINE
    (40) expression -> . SI comparison_op ALORS LSEPARATEUR expressions RSEPARATEUR SINON LSEPARATEUR expressions RSEPARATEUR
    (41) expression -> . SI comparison_op ALORS LSEPARATEUR expressions RSEPARATEUR
    (42) expression -> . TANTQUE comparison_op FAIRE LSEPARATEUR expressions RSEPARATEUR
    (43) expression -> . LIRE LPAREN identifiant RPAREN ENDLINE
    (44) expression -> . ECRIRE LPAREN expression_op RPAREN ENDLINE
    (45) expression -> . ECRIRE LPAREN string_id RPAREN ENDLINE
    (47) expression_fcall -> . ID LPAREN expression_op RPAREN ENDLINE
    (48) expression_fcall -> . ID LPAREN string_id RPAREN ENDLINE
    (49) expression_fcall -> . ID LPAREN RPAREN ENDLINE
    (19) EPSILON -> .

    ID              shift and go to state 55
    SI              shift and go to state 56
    TANTQUE         shift and go to state 57
    LIRE            shift and go to state 58
    ECRIRE          shift and go to state 59
    RSEPARATEUR     reduce using rule 19 (EPSILON -> .)

    bodyexp                        shift and go to state 50
    expressions                    shift and go to state 51
    expression                     shift and go to state 52
    expression_fcall               shift and go to state 53
    EPSILON                        shift and go to state 54

state 43

    (22) declaration -> ENTIER list_var . ENDLINE

    ENDLINE         shift and go to state 60


state 44

    (23) declaration -> ENTIER ID .
    (24) declaration -> ENTIER ID . COMMA declaration
    (25) declaration -> ENTIER ID . LCROCHET RCROCHET
    (26) declaration -> ENTIER ID . LCROCHET RCROCHET declaration
    (27) list_var -> ID .
    (28) list_var -> ID . COMMA list_var
    (29) list_var -> ID . LCROCHET RCROCHET
    (30) list_var -> ID . LCROCHET RCROCHET COMMA list_var

    LSEPARATEUR     reduce using rule 23 (declaration -> ENTIER ID .)
    COMMA           shift and go to state 61
    LCROCHET        shift and go to state 62
    ENDLINE         reduce using rule 27 (list_var -> ID .)


state 45

    (4) function -> identifiant LPAREN arguments RPAREN declarations LSEPARATEUR . bodyexp RSEPARATEUR
    (31) bodyexp -> . expressions
    (33) expressions -> . expression expressions
    (34) expressions -> . expression_fcall
    (35) expressions -> . EPSILON
    (36) expression -> . ID AFFECT expression_fcall
    (37) expression -> . ID LCROCHET expression_op RCROCHET AFFECT expression_fcall
    (38) expression -> . ID AFFECT expression_op ENDLINE
    (39) expression -> . ID LCROCHET expression_op RCROCHET AFFECT expression_op ENDLINE
    (40) expression -> . SI comparison_op ALORS LSEPARATEUR expressions RSEPARATEUR SINON LSEPARATEUR expressions RSEPARATEUR
    (41) expression -> . SI comparison_op ALORS LSEPARATEUR expressions RSEPARATEUR
    (42) expression -> . TANTQUE comparison_op FAIRE LSEPARATEUR expressions RSEPARATEUR
    (43) expression -> . LIRE LPAREN identifiant RPAREN ENDLINE
    (44) expression -> . ECRIRE LPAREN expression_op RPAREN ENDLINE
    (45) expression -> . ECRIRE LPAREN string_id RPAREN ENDLINE
    (47) expression_fcall -> . ID LPAREN expression_op RPAREN ENDLINE
    (48) expression_fcall -> . ID LPAREN string_id RPAREN ENDLINE
    (49) expression_fcall -> . ID LPAREN RPAREN ENDLINE
    (19) EPSILON -> .

    ID              shift and go to state 55
    SI              shift and go to state 56
    TANTQUE         shift and go to state 57
    LIRE            shift and go to state 58
    ECRIRE          shift and go to state 59
    RSEPARATEUR     reduce using rule 19 (EPSILON -> .)

    bodyexp                        shift and go to state 63
    expressions                    shift and go to state 51
    expression                     shift and go to state 52
    expression_fcall               shift and go to state 53
    EPSILON                        shift and go to state 54

state 46

    (14) argument -> ENTIER ID COMMA argument .

    RPAREN          reduce using rule 14 (argument -> ENTIER ID COMMA argument .)


state 47

    (15) argument -> ENTIER ID LCROCHET RCROCHET .
    (16) argument -> ENTIER ID LCROCHET RCROCHET . argument
    (13) argument -> . ENTIER ID
    (14) argument -> . ENTIER ID COMMA argument
    (15) argument -> . ENTIER ID LCROCHET RCROCHET
    (16) argument -> . ENTIER ID LCROCHET RCROCHET argument
    (17) argument -> . number
    (18) argument -> . number COMMA argument
    (60) number -> . ADD_OP NUMBER
    (61) number -> . NUMBER

    RPAREN          reduce using rule 15 (argument -> ENTIER ID LCROCHET RCROCHET .)
    ENTIER          shift and go to state 19
    ADD_OP          shift and go to state 21
    NUMBER          shift and go to state 22

    argument                       shift and go to state 64
    number                         shift and go to state 20

state 48

    (5) function -> type identifiant LPAREN arguments RPAREN declarations . LSEPARATEUR bodyexp roteurexp RSEPARATEUR

    LSEPARATEUR     shift and go to state 65


state 49

    (7) function_main -> type idmain LPAREN RPAREN declarations LSEPARATEUR . bodyexp roteurexp RSEPARATEUR
    (31) bodyexp -> . expressions
    (33) expressions -> . expression expressions
